--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -39,7 +39,6 @@
   display: flex;
   font-weight: 900;
   padding: 8px 12px;
-  //transition: border .2s ease-in-out, box-shadow .2s ease-in-out;
 
   svg {
     height: 16px;
@@ -53,7 +52,7 @@
   border-radius: 9999px;
   box-shadow: 0 0 10px rgba(0, 0, 0, .25);
   float: left;
-  filter: grayscale(1);
+  // filter: grayscale(1);
   height: 32px;
   margin: 0 8px 0 0;
   width: 32px;
@@ -63,7 +62,7 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
-  width: 500px;
+  width: 600px;
   margin: 1em;
 }
 
