--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -9,6 +9,7 @@ form {
     margin: 32px auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     max-width: 500px;
+    background-color:yellow;
   }
 
   ul {
