--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@
 @import 'utilities';
 
 html {
-  font-size: 62.5%;
+  font-size: 10px;
 }
 
 html,
@@ -52,7 +52,15 @@ footer {
     max-width: 500px;
   }
 }
-
+@media (max-width: 1024px) {
+  .container {
+    display: block;
+    padding: 0;
+  }
+  h1 {
+    margin: 50px 0 0 0;
+  }
+}
 .menu {
   padding-top: 8px;
   text-align: left;
@@ -69,6 +77,11 @@ footer {
 
   li+li {
     margin-top: 4px;
+  }
+}
+@media (max-width: 1024px) {
+  .menu {
+    text-align: center;
   }
 }
 
@@ -100,8 +113,19 @@ h1 {
     margin: 0;
     text-transform: capitalize;
   }
+  @media (max-width: 1024px) {
+    h1 {
+      margin: 50px 0 0 0;
+      text-align: center;
+      width: 100%;
+    }
+  }
 }
-
+@media (max-width: 1024px) {
+  .section-title {
+    width: 100%;
+  }
+  }
 .profile {
   align-items: center;
   display: flex;
